# DOTA-INFERENCE

./: CMakeLists.txt  README.md
images/: P0094.json  P0167.json  P0212.json  P0248.json  P0251.json  P0422.json  P0750.json  P0779.json  P0780.json  P0911.json  P0921.json  P0941.json  P0979.json  P1059.json  P1105.json  P1167.json  P1259.json  P1555.json  P1691.json  P1703.json  P1778.json  P1788.json  P1816.json  P1818.json  P1863.json  P2062.json  P2116.json  P2158.json  P2411.json  P2632.json  P2750.json  P2764.json  P2800.json
include/: rotated.h
src/: main.cpp  rotated.cpp
